--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
    "scripts": {
       "dev": "npx nodemon --exec ts-node ./source/index.ts",
       "migration": "npx typeorm-ts-node-commonjs migration:run -d connection.ts ",
-      "revert": "npx typeorm-ts-node-commonjs migration:revert -d connection.ts"
+      "revert": "npx typeorm-ts-node-commonjs migration:revert -d connection.ts",
+      "generate":"npx typeorm-ts-node-commonjs migration:generate ./source/migrations/relations -d connection.ts"
    },
    "author": "",
    "license": "ISC",
